--- a/ftelmap/src/styles/step-buttons.css
+++ b/ftelmap/src/styles/step-buttons.css
@@ -82,7 +82,7 @@
   .action-btn span {
     display: none;
   }
-  
+
   .action-btn {
     padding: 8px;
     border-radius: 50%;
@@ -103,7 +103,9 @@
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.5);
   transform: translate(-50%, -50%);
-  transition: width 0.4s, height 0.4s;
+  transition:
+    width 0.4s,
+    height 0.4s;
 }
 
 .action-btn:active::after {
